# syscalls-rust

./: Cargo.toml  README.md
src/: syscalls.rs  test.rs  types.rs
src/syscalls/: arch64.rs  linux.rs
src/types/: linux.rs
