[package]
name = "syscalls-rust"
license = "GPL-3.0-only"
readme = "README.md"
description = "Linux syscalls for rust"
keywords = ["linux", "syscalls", "c", "kernel"]
repository = "https://github.com/nandisomnath/syscalls-rust.git"
version = "0.2.10"
edition = "2024"
categories = ["api-bindings", "os::linux-apis"]
# documentation = "https://codeofsomnath.github.io/syscalls-rust?version=0.2.8"
exclude = [
    "docs/**"
]

[features]
# This features are defined for different architecture.
# if any arch I have missed then raise a issue and tell me about it
default = ["arch64"]
arch32 = [] # x86 64 bit, x32 abi
arch64 = [] # x86 64 bit, x86-64 abi
arm64 = [] # Arm 64 bit, Arch 64 bit abi
arm32 = [] # Arm 64 bit, Arch 32 bit abi


[dependencies]
