[package]
name = "syscalls-rust"
license = "GPL-3.0-only"
readme = "README.md"
description = "Linux syscalls for rust"
keywords = ["linux", "syscalls", "c", "kernel"]
repository = "https://github.com/nandisomnath/syscalls-rust.git"
version = "0.2.10"
edition = "2024"
categories = ["api-bindings", "os::linux-apis"]
# documentation = "https://codeofsomnath.github.io/syscalls-rust?version=0.2.8"
exclude = [
    "docs/**"
]

[features]
# Features are defined for different kernels
# if any kernel I have missed then raise a issue and tell me about it
default = ["linux"]
linux = [] # For linux system
windows = [] # For windows system
bsd = [] # For bsd system
macos = [] # For macos system


[dependencies]
